# manifestguard-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  manifestguard.yaml  pyproject.toml  sample-report.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: bad-deployment.yaml  good-deployment.yaml
src/manifest_guard/: analyzers.py  cli.py  config.py  engine.py  fixes.py  memory.py  models.py  policy_export.py  reporting.py  utils.py
tests/: test_analyzers.py  test_cli_exports.py  test_fixes.py  test_memory.py
